--- a/cvjs/src/components/canvasBool.html
+++ b/cvjs/src/components/canvasBool.html
@@ -8,10 +8,13 @@
 
 </head>
 <body>
-<div class="container-canvas">
-  <canvas id="canvas-bool">
+  
+  <div class="bools">
+    <canvas id="canvas-bool">
   </canvas>
-</div>
-  <script type="module" src="../js/draw.ts"></script>
+  </div>
+  
+  
+  <script type="module" src="../js/canvasBool.ts"></script>
 </body>
 </html>
