--- a/cvjs/src/css/style.css
+++ b/cvjs/src/css/style.css
@@ -1,5 +1,3 @@
-
-
 *{
   margin: 0;
   padding: 0;
@@ -18,6 +16,13 @@
 .window{
   min-height: 200px;
   background-color: transparent;
+  display: grid;
+  place-content: center;
+  font: italic small-caps bolder 20px 'Segoe UI';
+  
+}
+a{
+  text-decoration: none;
 }
 .link{
   display: inline-block;
@@ -284,8 +289,8 @@ text-align: center;
 }
   }
 }
-.container-canvas{
-  background-color: gray !important;
-  width: 100vw;
-  height: 100vh;
-}
+.bools{
+    background-color: #f0ab25;
+      height: 100vh;
+  }
+   
